--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 		ошибок была переоценка калорийности миндаля — более чем на 30 %, хотя разрешенная законом погрешность не должна
 		превышать 20 %.</p>
 
-
+	<a href="index-2.html">Ссылка на макет</a>
 </body>
 
 </html>
