--- a/index-2.html
+++ b/index-2.html
@@ -38,13 +38,17 @@
 		euismod vulputate etiam <br>eros. Vel accumsan at elit neque, ipsum.</p><br>
 	<p class="article">Mauris amet arcu nisl vel dictum tellus. Sed rhoncus, ut sed id ut erat mattis. Vitae mus blandit
 		in neque amet
-		non <br>fringilla blandit:</p><br><br>
+		non <br>fringilla blandit:</p>
+	<br>
+	<br>
 	<ul>
-		<li>A fermentum in morbi pretium aliquam adipiscing donec tempus.</li><br>
-		<li>Vulputate placerat amet pulvinar lorem nisl.</li><br>
-		<li>Consequat feugiat habitant gravida quisque elit bibendum id adipiscing sed.</li><br>
+		<li>A fermentum in morbi pretium aliquam adipiscing donec tempus.</li>
+		<li>Vulputate placerat amet pulvinar lorem nisl.</li>
+		<li>Consequat feugiat habitant gravida quisque elit bibendum id adipiscing sed.</li>
 		<li>Etiam duis lobortis in fames ultrices commodo nibh.</li>
-	</ul><br><br>
+	</ul>
+	<br>
+	<br>
 	<p>Enim, vel massa odio diam. Blandit massa gravida feugiat elementum id nec sed leo. Nisi in ornare lectus eget.
 		Urna,<br> risus, consectetur volutpat lorem purus. Velit aliquet nibh vitae maecenas. Consectetur neque ut aliquam
 		eros, purus <br>enim dignissim aenean vitae. Ultrices fames augue mattis tortor est justo, pharetra nibh risus.
